# SelfDrivingCarsCourse

./: README.md
.ipynb_checkpoints/: Kalman_Filters-checkpoint.ipynb
Course_1/: Course_1.md  Introduction to Self-Driving Cars.md  Safety Assurance for Autonomous Vehicles.md  Self-Driving Hardware and Software Architectures.md
Course_2/: Course_2.md  Least_Squares.ipynb  Module 1 - State Estimation and Localization for Self-Driving Cars.md  Module 2- State Estimation - Linear and Nonlinear Kalman Filters.md  Module 3- GNSS:INS Sensing for Pose Estimation.md  Module 4- LIDAR Sensing.md  Module 5: Putting It together - An Autonomous Vehicle State Estimator.md  Recursive_Least_Squares.ipynb
Course_3/: Environment Perception For Self-Driving Cars - Learner - v1.ipynb  pyproject.toml
