[tool.poetry]
name = "pao_carla"
version = "0.1.0"
description = ""
authors = ["Ali Benkassou <a.benkassou1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.2"
opencv-python = "^4.2.0"
matplotlib = "^3.2.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
